--- a/dome.ini
+++ b/dome.ini
@@ -6,13 +6,22 @@ ruleset=📢 谷歌服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=⛔️ 不走代理,[]DOMAIN-SUFFIX,time.windows.com
 ruleset=⛔️ 不走代理,[]DOMAIN-SUFFIX,client.wns.windows.com
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🪟 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=👨🏿‍💻 GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+ruleset=🤖 OpenAI,https://raw.githubusercontent.com/YX118/dome/main/AI.list
+ruleset=💧 Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=🐬 OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
+ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=♻️ Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
 ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -22,16 +31,31 @@ ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/ma
 ruleset=📢 谷歌服务,[]DOMAIN-KEYWORD,google
 ruleset=⛔️ 不走代理,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
+ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🪟 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=⛔️ 不走代理`select`[]DIRECT
 
 enable_rule_generator=true
