--- a/1.ini
+++ b/1.ini
@@ -5,10 +5,10 @@
 ruleset=📢 谷歌服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=⛔️ 不走代理,[]DOMAIN-SUFFIX,time.windows.com
 ruleset=⛔️ 不走代理,[]DOMAIN-SUFFIX,client.wns.windows.com
-ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
@@ -27,7 +27,6 @@ ruleset=🚀 节点选择,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
